components/01 - elements/heading/_heading.scss
.bold-headline {
  padding: 0;

  &.bold-headline--negative {
    color: $white;
  }
  a {
    color: $secondary;
    text-decoration: none;
    &:hover, &:focus {
      text-decoration: underline;
    }
  }
}

h2.bold-headline {
  font-size: 2.8rem;
}

.bold-headline--caps {
  text-transform: uppercase;
  font-family: $font-family-caps-bold;
}

.bold-headline--serif {
  font-family: $font-family-serif;
  font-weight: $font-weight-bold;
}

.bold-headline--underline {
  padding-bottom: $sm;
  line-height: 1.3;
  display: inline-block;
  background-size: 1px 1em;
  box-shadow:
    inset 0 -0.175em white,
    inset 0 -0.25em $primary;
}


.bold-headline--positive {
  @extend .bold-headline;
}

.bold-headline--negative {
  color: $white;
  @extend .bold-headline;
}

